# scTimeBench

./: .gitignore  .gitmodules  pyproject.toml
configs/pseudotimes/: psupertime.yaml  sceptic.yaml
examples/configs/: scNODE.yaml  scNODE_user_defined.yaml
examples/configs/scNODE/: gex.yaml  tp_zero.yaml
plotting/bar_plots/: plot.py
plotting/dot_plot/: data.csv  plot.py  plot_v4.py  plot_v5.py
plotting/dumbbell/: dumbbell.py  small_dumbbell.csv
plotting/heatmap/: heatmap.py
plotting/prc_vs_auroc/: full.csv  plot.py  split.py
plotting/scatter/: scatter.csv  scatter.py
src/: config.py  database.py  main.py
src/crispy_fishstick/: database.py
src/crispy_fishstick/metrics/: base.py
src/crispy_fishstick/metrics/embeddings/: base.py  default_datasets.yaml
src/crispy_fishstick/metrics/gex_prediction/: __init__.py  base.py  default_datasets.yaml
src/crispy_fishstick/metrics/gex_prediction/ot_eval/: __init__.py  base.py  energy.py  hausdorff.py  mmd.py  wass.py
src/crispy_fishstick/metrics/ontology_based/: base.py  default_datasets.yaml  optional_datasets.yaml
src/crispy_fishstick/metrics/ontology_based/graph_sim/: confusion_matrix.py  graph_viz.py
src/crispy_fishstick/shared/dataset/filters/: lineage.py  timepoint_split.py
src/crispy_fishstick/shared/dataset/registry/: drosophila.py  ma.py  maolaniru.py  mef.py  mioflow_utils.py  olaniru.py
src/dataset/: base.py
src/dataset/filters/: lineage.py
src/dataset/registry/: suo.py
src/metrics/: base.py
src/metrics/ontology_based/graph_sim/: base.py  ged.py  l1_norm.py
src/preprocess/: parse_cell_lineage.py
src/scTimeBench/shared/dataset/: optional_datasets.yaml
src/scTimeBench/shared/dataset/preprocessors/: pseudotime.py
